# twbar

./: Cargo.toml  cargo-wrapper.sh  env-wrapper.sh  flake.nix  nohup.out  shell.nix
src/: gtk_output.rs  main.rs  xdg_applications.rs
src/hyprland/: commands.rs  events.rs  mod.rs  monitors.rs  utils.rs  wayland_manager.rs  windows.rs  workspaces.rs
src/widgets/: battery_info.rs  clock.rs  command_button.rs  cpu_usage.rs  mod.rs  ram_usage.rs  taskbar.rs  taskbar_button.rs  workspace_button.rs  workspaces.rs
