[package]
name = "twbar"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "0.4", features = ["std", "kv"] }
env_logger = "0.11"
# Even though we don't depend on wayland-sys directly, we need to use dlopen so we don't
# load wayland-client before gtk4-layer-shell.
wayland-sys = { version = "0.31", features = ["dlopen"] }
gtk4-layer-shell = "0.7"
gtk4 = { version = "0.10", features = ["v4_20"] }
gdk4-wayland = { version = "0.10", features = ["wayland_crate", "v4_20"] }
gio = "0.21"
async-channel = "2.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-broadcast = "0.7"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
futures = "0.3"
udev = "0.9"
mio = { version = "1.1", features = ["os-poll", "os-ext"] }
chrono = { version = "0.4", features = ["clock"] }
upower_dbus = "0.3"
zbus = "5"

[dependencies.async-std]
version = "1"
features = ["attributes", "unstable"]
